5.0/_sources/calibtools.rst.txt
.. |ARMA.coefs| replace:: :const:`~hydpy.auxs.armatools.ARMA.coefs`
.. |Adaptor| replace:: :class:`~hydpy.auxs.calibtools.Adaptor`
.. |Add| replace:: :class:`~hydpy.auxs.calibtools.Add`
.. |CalibSpecs.names| replace:: :const:`~hydpy.auxs.calibtools.CalibSpecs.names`
.. |CalibSpecs| replace:: :class:`~hydpy.auxs.calibtools.CalibSpecs`
.. |CalibSpec| replace:: :class:`~hydpy.auxs.calibtools.CalibSpec`
.. |CalibrationInterface.add_rules| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.add_rules`
.. |CalibrationInterface.apply_values| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.apply_values`
.. |CalibrationInterface.calculate_likelihood| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.calculate_likelihood`
.. |CalibrationInterface.finalise_logfile| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.finalise_logfile`
.. |CalibrationInterface.get_rule| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.get_rule`
.. |CalibrationInterface.perform_calibrationstep| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.perform_calibrationstep`
.. |CalibrationInterface.prepare_logfile| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.prepare_logfile`
.. |CalibrationInterface.print_table| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.print_table`
.. |CalibrationInterface.read_logfile| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.read_logfile`
.. |CalibrationInterface.remove_rules| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.remove_rules`
.. |CalibrationInterface.reset_parameters| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.reset_parameters`
.. |CalibrationInterface.update_logfile| replace:: :func:`~hydpy.auxs.calibtools.CalibrationInterface.update_logfile`
.. |CalibrationInterface| replace:: :class:`~hydpy.auxs.calibtools.CalibrationInterface`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |FactorAdaptor| replace:: :class:`~hydpy.auxs.calibtools.FactorAdaptor`
.. |False| replace:: :const:`False`
.. |HydPy.conditions| replace:: :const:`~hydpy.core.hydpytools.HydPy.conditions`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |IUH| replace:: :class:`~hydpy.auxs.iuhtools.IUH`
.. |LinearStorageCascade.k| replace:: :const:`~hydpy.auxs.iuhtools.LinearStorageCascade.k`
.. |LinearStorageCascade.n| replace:: :const:`~hydpy.auxs.iuhtools.LinearStorageCascade.n`
.. |LinearStorageCascade| replace:: :class:`~hydpy.auxs.iuhtools.LinearStorageCascade`
.. |MultiplyIUH| replace:: :class:`~hydpy.auxs.calibtools.MultiplyIUH`
.. |Multiply| replace:: :class:`~hydpy.auxs.calibtools.Multiply`
.. |None| replace:: :const:`None`
.. |Obs| replace:: :class:`~hydpy.core.sequencetools.Obs`
.. |Options.parameterstep| replace:: :const:`~hydpy.core.optiontools.Options.parameterstep`
.. |Options.simulationstep| replace:: :const:`~hydpy.core.optiontools.Options.simulationstep`
.. |Options.warntrim| replace:: :const:`~hydpy.core.optiontools.Options.warntrim`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |Replace.apply_value| replace:: :func:`~hydpy.auxs.calibtools.Replace.apply_value`
.. |ReplaceIUH.apply_value| replace:: :func:`~hydpy.auxs.calibtools.ReplaceIUH.apply_value`
.. |ReplaceIUH| replace:: :class:`~hydpy.auxs.calibtools.ReplaceIUH`
.. |Replace| replace:: :class:`~hydpy.auxs.calibtools.Replace`
.. |Rule.apply_value| replace:: :func:`~hydpy.auxs.calibtools.Rule.apply_value`
.. |Rule.parameterstep| replace:: :const:`~hydpy.auxs.calibtools.Rule.parameterstep`
.. |Rule.reset_parameters| replace:: :func:`~hydpy.auxs.calibtools.Rule.reset_parameters`
.. |Rule.value| replace:: :const:`~hydpy.auxs.calibtools.Rule.value`
.. |RuleIUH.add_iuhs| replace:: :func:`~hydpy.auxs.calibtools.RuleIUH.add_iuhs`
.. |RuleIUH.reset_parameters| replace:: :func:`~hydpy.auxs.calibtools.RuleIUH.reset_parameters`
.. |RuleIUH.update_parameters| replace:: :attr:`~hydpy.auxs.calibtools.RuleIUH.update_parameters`
.. |RuleIUH| replace:: :class:`~hydpy.auxs.calibtools.RuleIUH`
.. |Rule| replace:: :class:`~hydpy.auxs.calibtools.Rule`
.. |Selections| replace:: :class:`~hydpy.core.selectiontools.Selections`
.. |Selection| replace:: :class:`~hydpy.core.selectiontools.Selection`
.. |Sim| replace:: :class:`~hydpy.core.sequencetools.Sim`
.. |SumAdaptor| replace:: :class:`~hydpy.auxs.calibtools.SumAdaptor`
.. |TargetFunction| replace:: :class:`~hydpy.auxs.calibtools.TargetFunction`
.. |TranslationDiffusionEquation.d| replace:: :const:`~hydpy.auxs.iuhtools.TranslationDiffusionEquation.d`
.. |TranslationDiffusionEquation.u| replace:: :const:`~hydpy.auxs.iuhtools.TranslationDiffusionEquation.u`
.. |TranslationDiffusionEquation| replace:: :class:`~hydpy.auxs.iuhtools.TranslationDiffusionEquation`
.. |True| replace:: :const:`True`
.. |arma_v1| replace:: :mod:`~hydpy.models.arma_v1`
.. |hland_v1| replace:: :mod:`~hydpy.models.hland_v1`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |make_rules| replace:: :func:`~hydpy.auxs.calibtools.make_rules`
.. |musk_classic| replace:: :mod:`~hydpy.models.musk_classic`
.. |nse| replace:: :func:`~hydpy.auxs.statstools.nse`
.. |prepare_full_example_2| replace:: :func:`~hydpy.examples.prepare_full_example_2`
.. |tuple| replace:: :class:`tuple`
.. |arma_control.Responses| replace:: :class:`~hydpy.models.arma.arma_control.Responses`
.. |hland_constants.FIELD| replace:: :const:`~hydpy.models.hland.hland_constants.FIELD`
.. |hland_constants.FOREST| replace:: :const:`~hydpy.models.hland.hland_constants.FOREST`
.. |hland_constants.GLACIER| replace:: :const:`~hydpy.models.hland.hland_constants.GLACIER`
.. |hland_constants.ILAKE| replace:: :const:`~hydpy.models.hland.hland_constants.ILAKE`
.. |hland_control.Alpha| replace:: :class:`~hydpy.models.hland.hland_control.Alpha`
.. |hland_control.CFMax| replace:: :class:`~hydpy.models.hland.hland_control.CFMax`
.. |hland_control.FC| replace:: :class:`~hydpy.models.hland.hland_control.FC`
.. |hland_control.GMelt| replace:: :class:`~hydpy.models.hland.hland_control.GMelt`
.. |hland_control.K4| replace:: :class:`~hydpy.models.hland.hland_control.K4`
.. |hland_control.K| replace:: :class:`~hydpy.models.hland.hland_control.K`
.. |hland_control.PercMax| replace:: :class:`~hydpy.models.hland.hland_control.PercMax`
.. |hland_control.ZoneType| replace:: :class:`~hydpy.models.hland.hland_control.ZoneType`
.. |hland_masks.Glacier| replace:: :class:`~hydpy.models.hland.hland_masks.Glacier`
.. |lland_control.PWP| replace:: :class:`~hydpy.models.lland.lland_control.PWP`
.. |lland_control.WMax| replace:: :class:`~hydpy.models.lland.lland_control.WMax`
.. |musk_control.Coefficients| replace:: :class:`~hydpy.models.musk.musk_control.Coefficients`
.. |musk_control.NmbSegments| replace:: :class:`~hydpy.models.musk.musk_control.NmbSegments`
.. |numpy.inf| replace:: :const:`~numpy.inf`
.. |time.sleep| replace:: :func:`~time.sleep`
.. |warnings.warn| replace:: :func:`~warnings.warn`

.. _calibtools:

calibtools
==========

.. automodule:: hydpy.auxs.calibtools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
